# angel-engine

./: .gitignore  2code.json  AGENTS.md  CLAUDE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.github/workflows/: release.yml  rust.yml
apps/website/: package.json
apps/website/src/app/: SectionNav.tsx  globals.css  layout.tsx  page.tsx
crates/angel-engine/src/state/: message.rs
crates/angel-provider/: Cargo.toml
crates/angel-provider/src/: cursor.rs
crates/angel-provider/src/acp/: encode.rs  helpers.rs
crates/angel-provider/src/acp/notifications/: session_update.rs
crates/angel-provider/src/codex/: response.rs
crates/angel-provider/src/kimi/: mod.rs
crates/angel-provider/tests/adversarial_cases/: acp.rs
desktop/: eslint.config.mjs  forge.config.ts  package.json  vite.main.config.ts
desktop/src/main/: index.ts
desktop/src/main/features/agents/: availability.ts
desktop/src/main/features/chat/: engine-runtime.ts
desktop/src/main/features/projects/: file-search.ts  ipc.ts
desktop/src/main/platform/: application-menu.ts  node-which.ts
desktop/src/main/windows/: factory.ts  notifications.ts
desktop/src/renderer/app/workspace/: chat-runtime-options.ts  use-draft-chat-options.ts  workspace-chat-thread.tsx  workspace-page.tsx  workspace-runtime-keys.ts
desktop/src/renderer/components/ai-elements/: prompt-input.tsx
desktop/src/renderer/components/assistant-ui/: tool-group.tsx
desktop/src/shared/: agents.ts
desktop/src/shared/chat/: index.ts
patches/: @anthropic-ai__claude-agent-sdk@0.2.141.patch
(+9 files in other folders)
